--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,11 @@
             <version>7.0.34.0</version>
             <scope>provided</scope>
         </dependency>
+		<dependency>
+		    <groupId>org.webjars</groupId>
+		    <artifactId>bootstrap</artifactId>
+		    <version>3.0.0</version>
+		</dependency>        
     </dependencies>
 
     <build>
