--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <project>
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.example</groupId>
-    <artifactId>spring-hibernate-template</artifactId>
+    <artifactId>nameless-tundar-1489</artifactId>
     <packaging>war</packaging>
     <version>0.0.1-SNAPSHOT</version>
 
@@ -106,6 +106,17 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.mortbay.jetty</groupId>
+                <artifactId>jetty-maven-plugin</artifactId>
+                <version>8.1.5.v20120716</version>
+				<configuration>
+				  <scanIntervalSeconds>10</scanIntervalSeconds>
+				  <webApp>
+				    <contextPath>/nameless-tundra-1489</contextPath>
+				  </webApp>
+				</configuration>                
             </plugin>
         </plugins>
     </build>
