--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,7 +10,7 @@ xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns
 	<!-- The definition of the Root Spring Container shared by all Servlets and Filters -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>classpath:spring/security-context.xml, classpath:spring/database-context.xml</param-value>
+		<param-value>classpath:spring/root-context.xml</param-value>
 	</context-param>
 
 	<!-- Creates the Spring Container shared by all Servlets and Filters -->
@@ -42,7 +42,7 @@ xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns
 	</filter>
 	<filter-mapping>
 		<filter-name>httpMethodFilter</filter-name>
-		<servlet-name>petclinic</servlet-name>
+		<servlet-name>timetrackr</servlet-name>
 	</filter-mapping>
 	<filter>
 		<filter-name>springSecurityFilterChain</filter-name>
